--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,8 +1,29 @@
-name: Sync Forkon:schedule:- cron: '0 0 * * *'  # Runs daily at midnight UTCworkflow_dispatch:  # Allows manual triggerjobs:sync:runs-on: ubuntu-lateststeps:- name: Checkout the repositoryuses: actions/checkout@v4- name: Set up Gitrun: |
+name: Sync Fork
+
+on:
+  schedule:
+    - cron: '0 0 * * *'  # Runs daily at midnight UTC
+  workflow_dispatch:  # Allows manual trigger
+
+jobs:
+  sync:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v4
+
+      - name: Set up Git
+        run: |
           git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"- name: Add upstream and fetch changesrun: |
+          git config --global user.email "github-actions@github.com"
+
+      - name: Add upstream and fetch changes
+        run: |
           git remote add upstream https://github.com/GQ93/BrainGeneBot.git
-          git fetch upstream- name: Merge upstream changesrun: |
+          git fetch upstream
+
+      - name: Merge upstream changes
+        run: |
           git checkout main
           git merge upstream/main --allow-unrelated-histories || true
           git push origin main
